src/test/deca/syntax/invalid/homemade/parser/test/test_pars_inv_class_method_oubli_iden.deca
// Description:
//    tests de programme incorrect syntaxiquement pour les class
//
// Resultats:
//    Ligne 12 : Erreur (missing IDENT after "int")
//    
//
// Historique:
//    cree le 04/01/2023

class iden3{
    int (gloat iden)
    {type var; instr;}
}